# dissect.eventlog

./: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dissect/eventlog/: __init__.py  bxml.py  evt.py  evtx.py  exceptions.py  utils.py  wevt.py  wevt_object.py  wevtutil.py
dissect/eventlog/bxml/: __init__.py  bxml.py  c_bxml.py  c_bxml.pyi
dissect/eventlog/evt/: __init__.py  c_evt.py  c_evt.pyi  evt.py
dissect/eventlog/evtx/: __init__.py  c_evtx.py  c_evtx.pyi  evtx.py
dissect/eventlog/wevt/: __init__.py  c_wevt.py  c_wevt.pyi  wevt.py  wevt_object.py
examples/: parse_wevt.py  pool_evtx.py  pool_wevtutil.py  scrape_evt.py  scrape_evtx.py  splunkify_evtx.py  splunkify_wevtutil.py
tests/: _utils.py  conftest.py  test_benchmark.py  test_binxml.py  test_crim.py  test_evt.py  test_evtx.py  test_maps.py  test_wevt.py  test_wevt_type.py  test_wevtobj.py
tests/_data/: mpengine_etw.wevt
tests/_docs/: conf.py
tests/data/: TestLog-dirty.evt
tests/wevt/: test_crim.py  test_maps.py  test_wevt.py  test_wevt_type.py  test_wevtobj.py
